--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,6 @@
+php_value post_max_size=15M
+php_value upload_max_filesize=15M
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
@@ -18,4 +21,6 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+
 </IfModule>
