--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17",
+        "vue": "^2.6.10",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "bootstrap-vue": "^2.0.0-rc.20",
+        "bs-custom-file-input": "^1.3.2",
         "vuex": "^3.1.0"
     }
 }
