--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "dependencies": {
         "bootstrap-vue": "^2.0.0-rc.20",
         "bs-custom-file-input": "^1.3.2",
-        "moment": "^2.24.0",
-        "vue-moment": "^4.0.0",
+        "vue2-editor": "^2.7.2",
         "vuex": "^3.1.0"
     }
 }
