--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "bootstrap-vue": "^2.0.0-rc.20",
         "bs-custom-file-input": "^1.3.2",
         "vue2-editor": "^2.7.2",
+        "vuedraggable": "^2.21.0",
         "vuex": "^3.1.0"
     }
 }
