--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "private": true,
     "scripts": {
+        "build": "cross-env NODE_ENV=production babel src --out-dir dist --source-maps inline",
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
@@ -13,7 +14,7 @@
         "@fortawesome/fontawesome-free": "^5.8.2",
         "axios": "^0.19.0",
         "bootstrap": "^4.0.0",
-        "cross-env": "^5.1",
+        "cross-env": "^5.2.1",
         "font-awesome": "^4.7.0",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.16",
