--- a/public/.htaccess
+++ b/public/.htaccess
@@ -8,7 +8,7 @@
     Order Allow,Deny
     Allow from 194.54
     Allow from 127.0
-    Allow from 10.100
+    Allow from 10.
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
