--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@fortawesome/fontawesome-free": "^5.8.2",
-        "axios": "^0.19.0",
-        "bootstrap": "^4.0.0",
+        "@fortawesome/fontawesome-free": "^5.13.1",
+        "axios": "^0.19.2",
+        "bootstrap": "^4.5.0",
         "cross-env": "^5.2.1",
         "font-awesome": "^4.7.0",
-        "jquery": "^3.2",
-        "laravel-mix": "^4.0.16",
+        "jquery": "^3.5.1",
+        "laravel-mix": "^4.1.4",
         "lodash": "^4.17.15",
-        "popper.js": "^1.12",
+        "popper.js": "^1.16.1",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
-        "sass-loader": "7.*",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "sass": "^1.26.8",
+        "sass-loader": "^7.3.1",
+        "vue": "^2.6.11",
+        "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "bootstrap-vue": "^2.0.0-rc.20",
-        "bs-custom-file-input": "^1.3.2",
+        "bootstrap-vue": "^2.15.0",
+        "bs-custom-file-input": "^1.3.4",
         "vue-multiselect": "^2.1.6",
-        "vue2-editor": "^2.7.2",
-        "vuedraggable": "^2.21.0",
-        "vuex": "^3.1.0"
+        "vue2-editor": "^2.10.2",
+        "vuedraggable": "^2.23.2",
+        "vuex": "^3.4.0"
     }
 }
