--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /.idea
 /node_modules
 /public/hot
-/public/storage/*
+/public/storage
 /storage/*.key
 /vendor
 .env
@@ -12,5 +12,3 @@ npm-debug.log
 yarn-error.log
 /.idea/
 /storage/
-/backups/*
-
