--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "@popperjs/core": "^2.4.4",
         "bootstrap-vue": "^2.15.0",
         "bs-custom-file-input": "^1.3.4",
         "vue-multiselect": "^2.1.6",
